[tool.poetry]
name = "multimv"
version = "0.2.0"
description = "Multi mv via fixed string / regex / bash pattern substitutions"
authors = ["Summer"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
multimv = 'multimv:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
